# YOLO-Accident-Detection-Custom-Data

./: .gitignore  README.md  pyproject.toml
dataset/: data.yaml
dataset/labels/: train.cache  val.cache
dataset/labels/train/: acc1 (1).txt  acc1 (15).txt  acc1 (2).txt  acc1 (3).txt  acc1 (5).txt  test10_10.txt  test10_11.txt  test10_12.txt  test10_13.txt  test10_14.txt  test10_15.txt  test10_16.txt  test10_17.txt  test10_18.txt  test10_19.txt  test10_20.txt  test10_21.txt  test10_24.txt  test10_25.txt  test10_26.txt  test10_28.txt  test10_29.txt  test10_30.txt  test10_31.txt  test10_32.txt  test10_35.txt  test10_37.txt  test10_38.txt  test10_39.txt  test10_40.txt  test10_41.txt  test10_42.txt  test10_43.txt  test10_44.txt  test10_45.txt  test10_47.txt  test10_48.txt  test10_49.txt  test10_50.txt  test10_51.txt  (+251 more)
dataset/labels/val/: test10_54.txt  test13_18.txt  test13_20.txt  test15_9.txt  test26_15.txt  test26_22.txt  test27_17.txt  test27_21.txt  test27_9.txt  test2_23.txt  test4_47.txt  test_30.txt  test_37.txt
dataset/test/images/: test10_56.xml.txt  test13_22.xml.txt  test1_20.xml.txt  test21_20.xml.txt  test24_30.xml.txt  test26_30.xml.txt  test27_13.xml.txt  test27_25.xml.txt  test2_10.xml.txt  test3_32.xml.txt  test4_37.xml.txt  test4_42.xml.txt  test5_12.xml.txt
dataset/test/labels/: test12_13.txt.txt  test15_15.txt.txt  test1_18.txt.txt  test26_23.txt.txt  test2_7.txt.txt  (+3 more)
notebooks/: playground.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
runs/accident_train_v1/: args.yaml  results.csv
src/: main.py  prediction.py  training.py
