[project]
name = "accident-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "opencv-python>=4.13.0.92",
    "torch>=2.5.1",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.13",
]
